--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,18 @@ dependencies:
     sdk: flutter
   uuid: ^4.1.0
   shared_preferences: ^2.2.0
+  url_launcher: ^6.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.0
   flutter_lints: ^3.0.0
 
 flutter:
   uses-material-design: true
+
+flutter_icons:
+  android: true
+  ios: false
+  image_path: 'assets/icon/icon.png'
