--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -2,9 +2,7 @@ name: Build Android APK
 
 on:
   push:
-    branches: [main, dev]
-  pull_request:
-    branches: [main, dev]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
@@ -28,9 +26,6 @@ jobs:
 
       - name: Get dependencies
         run: flutter pub get
-
-      - name: Run tests
-        run: flutter test
 
       - name: Build APK
         run: flutter build apk --release --build-number=${{ github.run_number }}
