--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   share_plus: ^7.2.1
   path_provider: ^2.1.0
   awesome_notifications: ^0.10.0
+  font_awesome_flutter: ^10.6.0
 
 dev_dependencies:
   flutter_test:
